# solfuzz-agave

./: .gitignore  Cargo.toml  Cargo_local.toml.bak  Dockerfile  Makefile  README.md  build.rs  corebpf.mk  docker  ubuntu2004.Dockerfile
.github/scripts/: release.sh
.github/workflows/: build-common.yml  build-merge.yml  build-pr.yml  build.yml  on_agavev2.0_push.yml
macro/: Cargo.toml
macro/src/: lib.rs
proto/: context.proto  elf.proto  invoke.proto  prog.proto  txn.proto  vm.proto
scripts/: fetch_program.sh  fetch_proto.sh  run_test_vectors.sh
src/: elf_loader.rs  lib.rs  shred_parse.rs  txn_fuzzer.rs  txn_fuzzer_fast.rs  vm_cpi_syscall.rs  vm_interp.rs  vm_syscalls.rs  vm_validate.rs
src/utils/: err_map.rs  mod.rs
src/utils/vm/: err_map.rs  mem_regions.rs  mod.rs
test/: self_test.c
tests/: txn_fuzzer_sanity.rs
