[package]
name = "solfuzz-agave"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# We point deps to firedancer-io/agave fork's `solfuzz-agave-vX.X-patches` branch
# This branch is based on the agave branch we are tracking and contains patches to make fuzzing easier
# Refer to https://github.com/firedancer-io/agave/blob/solfuzz-agave-v2.0-patches/SOLFUZZ_README.md
# for details on how to manage this branch
[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4.0"
prost = "0.13.1"
prost-types = "0.13.1"
libc = "0.2.155"
solana-address-lookup-table-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-accounts-db = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-bpf-loader-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-compute-budget = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-compute-budget-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-config-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-ledger = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-loader-v4-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-log-collector = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-program-runtime = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-runtime = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd", features = ["dev-context-only-utils"] }
solana-stake-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-system-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-svm = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-sdk = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-timings = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-vote-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-zk-sdk = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-zk-elgamal-proof-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-poseidon = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solfuzz-agave-macro = { path = "macro" }
thiserror = "1.0.61"

[build-dependencies]
prost-build = "0.13.1"


[patch.crates-io]
solana-program = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
solana-zk-token-sdk = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }

[features]
# This feature is used to stub out certain parts of the agave runtime for fuzzing
stub-agave = ["solana-program-runtime/stub-proc-instr"]
