[package]
name = "solfuzz-agave-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
solana-sdk = { git = "https://github.com/anza-xyz/agave", rev = "d36954cb72679dbe130f4a0a212b8c8a0026ea78" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
