[package]
name = "solfuzz-agave-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
solana-sdk = { git = "https://github.com/firedancer-io/agave", rev = "ab40f6333c1fa12a9941b752a8d11a3c3fa0a81f" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
