[package]
name = "solfuzz-agave-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
solana-sdk = { git = "https://github.com/firedancer-io/agave", rev = "f5acfa6a316baef54b7ee81f5f02230839f436fd" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
